fdo#69090 Avoid using a string after free

Change-Id: I9020b595e434b4de8aa6a14c20d6c98fa619b96a
Reviewed-on: https://gerrit.libreoffice.org/11502
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Tor Lillqvist <tml@collabora.com>